# tree-sitter-sil

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-sil.pc.in
bindings/c/tree_sitter/: tree-sitter-sil.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_sil/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSilTests/: TreeSitterSilTests.swift
examples/: test.sil
queries/: folds.scm  highlights.scm  indents.scm  locals.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: comments.txt  control_flow.txt  fields.txt  functions.txt  literals.txt  variables.txt
